--- a/lesson5/part1/index.html
+++ b/lesson5/part1/index.html
@@ -6,12 +6,13 @@
 
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
 </head>
 
 <body>
     <button>Нажми меня</button>
 
-    <div class="hiden-block hidden">
+    <div class="hiden-block hidden ">
         <a href="#"><img src="times-circle-solid.svg" alt=""></a>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
             A, sed laudantium assumenda, esse repellat quo numquam voluptatem
